hq sandbox - latest/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Convertable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Convertable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_CRM_Database__c</fullName>
        <label>Current Solution</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTCRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascendix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClientLook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldmine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple CRM/Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook/Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PropertyBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realhound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REApplications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REthink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deskcom__twitter_username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any relevant notes about the lead.</description>
        <inlineHelpText>Any relevant notes about the lead.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possible_Licenses__c</fullName>
        <label>Possible Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Tenant Representation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Representation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Brokerage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X10_24_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>10-24 Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__Allow_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sds__Duplicate_Key__c</fullName>
        <label>Duplicate Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sds__Master_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Master Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sds__Not_duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sds__Picklist_values__c</fullName>
        <label>Picklist values</label>
        <picklist>
            <picklistValues>
                <fullName>test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>why not working testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Very Good Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Good Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Average Student</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sds__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sds__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sds__Product_Code__c</fullName>
        <label>Product Code</label>
        <picklist>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test by not working</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>sds__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sds__Sub_set_Date__c</fullName>
        <label>Sub set Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sds__Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sds__sDuplicate_Key__c</fullName>
        <label>sDuplicate Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sds__test_Picklist__c</fullName>
        <label>test Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>1: Apple-sause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2: Island of Ecxelland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3: nothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>